--- a/blog/first-post/index.mdx
+++ b/blog/first-post/index.mdx
@@ -6,6 +6,11 @@ thing4: I think it needs to have these variables
 test1: aaa
 date: 2021-07-23
 title: this is the title 1
+
+hero_image: "./splash1.jpg"
+hero_image_alt: "landscape picture 1"
+hero_image_credit_text: "unplash..."
+hero_image_credit_link: "https://unsplash.com/photos/7Tec2ehoaZw"
 ---
 
 this is a blog post 1
